Use newer API for Base64 encoding